--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+.form-group {
+  margin: 10px;
+}
+
+input,
+select {
+  border: 1px solid #ccc;
+  outline: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+}
+
+button {
+  border: none;
+  outline: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+}
